home pg one sec

--- a/public/other-l-and-d-services/index.html
+++ b/public/other-l-and-d-services/index.html
@@ -55,13 +55,10 @@
         <a class="nav-link" href="/esp-approach">ESP Approach</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/clientele-beneficiaries">Clientele Beneficiaries</a>
+        <a class="nav-link" href="/clientele-beneficiaries">Clientele</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/other-l-and-d-services">Other L&amp;D Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/career">Career</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/contact-us">Contact Us</a>
@@ -84,7 +81,7 @@
   <main>
     
 <section class="py-5">
-  <div class="container">
+  <div class="container d-none">
     <div class="row justify-content-between align-items-center border-3 border-top border-bottom py-2">
       <div class="col-auto">
         <div class="d-flex align-items-center gap-2">
@@ -113,7 +110,30 @@
 </section>
 
 
- 
+
+
+
+
+<section class="otherLD">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 mx-auto">
+        <h3>Other L&D Services</h3>
+        <ul>
+          <li>Training Courseware Development (TCD)</li>
+          <li>Outbound training Programs logistics support – Learning activities conducted in outdoor settings, bringing the joy of discovery through nature.</li>
+          <li>External Periodic Programs</li>
+          <li>Support for Internal Training Programs</li>
+          <li>Faculty Co-facilitation</li>
+          <li>Training Needs Analysis & Effectiveness Audits</li>
+          <li>Design and Implementation of Training Processes</li>
+          <li>Capturing Innovative Practices – To preserve organizational learnings for future growth.</li>
+          <li>Training Facilitation in major Indian languages.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
 
   </main>
