--- a/public/career/index.html
+++ b/public/career/index.html
@@ -55,13 +55,10 @@
         <a class="nav-link" href="/esp-approach">ESP Approach</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/clientele-beneficiaries">Clientele Beneficiaries</a>
+        <a class="nav-link" href="/clientele-beneficiaries">Clientele</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/other-l-and-d-services">Other L&amp;D Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/career">Career</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/contact-us">Contact Us</a>
@@ -84,7 +81,7 @@
   <main>
     
 <section class="py-5">
-  <div class="container">
+  <div class="container d-none">
     <div class="row justify-content-between align-items-center border-3 border-top border-bottom py-2">
       <div class="col-auto">
         <div class="d-flex align-items-center gap-2">
@@ -113,7 +110,8 @@
 </section>
 
 
- 
+
+
 
 
   </main>
