--- a/public/esp-approach/index.html
+++ b/public/esp-approach/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.95b92fe699c9ed6b9a9f39a94bbd85595af7fcdb3e94914b35bb34cbe1bd4194.css" integrity="sha256-lbkv5pnJ7WuanzmpS72FWVr3/Ns&#43;lJFLNbs0y&#43;G9QZQ=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.05d2bd48c95036cc7baaa3db2d98e244fa6a208cdaed12318ed89e7567941ad5.css" integrity="sha256-BdK9SMlQNsx7qqPbLZjiRPpqIIza7RIxjtiedWeUGtU=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -177,20 +177,49 @@
 
 
   </main>
-  <footer class="text-center text-lg-start">
-    <div class="container p-4">
-      <section class="mb-4">
-        <p>Phone: +91-9962006364 | Email: link2rmd@gmail.com</p>
-        <p>© 2024 ESPeople. All rights reserved. Sketched with love by TenSketch</p>
-        <div>
-          <a href="#" class="me-3">Facebook</a>
-          <a href="#" class="me-3">Instagram</a>
-          <a href="#">LinkedIn</a>
-        </div>
-      </section>
-    </div>
-  </footer>
   
+
+   <footer class="footer">
+    <div class="container text-center">
+        <div class="footer-logo">
+            <img src="/images/logo.png" alt="ESPeople Logo" class="logo-img">
+        </div>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Clientele</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Other L&D</a>
+            </li>
+            
+             <li class="nav-item">
+              <a class="nav-link" href="#">Training Programs</a>
+             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact us</a>
+            </li>
+        </ul>
+
+        <div class="social-icons mt-3">
+            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            
+             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+        </div>
+
+        <p class="footer-copyright">
+            © 2024 ESPeople. All rights reserved. Sketched with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://www.tensketch.com/" title="TenSketch website">TenSketch</a>
+        </p>
+    </div>
+</footer>
+
 </body>
 
 </html>
