esp business single page

--- a/public/esp-education/index.html
+++ b/public/esp-education/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c09182900b8bb4ceaa5630d88ddf62bd206a760b8717f48a00fe305cdbad5729.css" integrity="sha256-wJGCkAuLtM6qVjDYjd9ivSBqdguHF/SKAP4wXNutVyk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.50f3b8b25b7d8fbb1c86b8edf95371fb6a216d99b313e4971fd50c871eeff115.css" integrity="sha256-UPO4slt9j7schrjt&#43;VNx&#43;2ohbZmzE&#43;SXH9UMhx7v8RU=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -191,38 +191,21 @@
 
 
 
-<section class="py-5">
-  <div class="container">
-    <div class="row mt-4 mt-md-5">
-      
-      <div class="col-md-8 mx-auto">
-        <h2 id="education-sector-overview">Education Sector Overview</h2>
-<p>In the ever-evolving field of education, staying ahead of changes and ensuring that educators are equipped with the best tools is essential. Our range of programs is designed to enhance teaching capabilities, develop innovative curriculum designs, and provide experiential learning opportunities to foster creative thinking and problem-solving.</p>
-<p>We offer the following programs under the <strong>Education Sector</strong>:</p>
-<h3 id="1-teaching-excellence-solutions-tesclientele-beneficiarieseducationtes">1. <a href="/clientele-beneficiaries/education/tes">Teaching Excellence Solutions (TES)</a></h3>
-<p>Offering specialized training services to enhance teaching and administrative capabilities, TES helps educators improve student engagement and classroom effectiveness.</p>
-<h3 id="2-curriculum-design-innovation-cdiclientele-beneficiarieseducationcdi">2. <a href="/clientele-beneficiaries/education/cdi">Curriculum Design Innovation (CDI)</a></h3>
-<p>CDI focuses on creating tailored course materials that improve curriculum delivery, ensuring that students receive the best possible educational experience.</p>
-<h3 id="3-experiential-learning-expeditions-eleclientele-beneficiarieseducationele">3. <a href="/clientele-beneficiaries/education/ele">Experiential Learning Expeditions (ELE)</a></h3>
-<p>ELE takes learning outside the classroom, offering hands-on activities that promote creative thinking and real-world problem-solving.</p>
-<h3 id="4-teacher-development-support-tdsclientele-beneficiarieseducationtds">4. <a href="/clientele-beneficiaries/education/tds">Teacher Development Support (TDS)</a></h3>
-<p>TDS assists in creating internal development programs for teachers, offering continuous professional growth and instructional improvement.</p>
-<h3 id="5-educational-breakthrough-capture-ebcclientele-beneficiarieseducationebc">5. <a href="/clientele-beneficiaries/education/ebc">Educational Breakthrough Capture (EBC)</a></h3>
-<p>EBC focuses on preserving educational breakthroughs and best practices, allowing educators to replicate successful strategies for long-term success.</p>
-<p>Each program is carefully crafted to address the unique challenges faced by educators today. Explore these offerings to find the right fit for your institution&rsquo;s needs.</p>
 
-        
-
-      </div>
-    </div>
-  </div>
-</section>
+<p>Content for other category 2</p>
 
 
 
 
 
- 
+
+
+
+
+
+
+
+
 
 
 
