--- a/public/esp-non-profit/index.html
+++ b/public/esp-non-profit/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c09182900b8bb4ceaa5630d88ddf62bd206a760b8717f48a00fe305cdbad5729.css" integrity="sha256-wJGCkAuLtM6qVjDYjd9ivSBqdguHF/SKAP4wXNutVyk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.50f3b8b25b7d8fbb1c86b8edf95371fb6a216d99b313e4971fd50c871eeff115.css" integrity="sha256-UPO4slt9j7schrjt&#43;VNx&#43;2ohbZmzE&#43;SXH9UMhx7v8RU=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -191,12 +191,7 @@
 
 
 
-<section class="py-5">
-  <div class="container">
-    <div class="row mt-4 mt-md-5">
-      
-      <div class="col-md-8 mx-auto">
-        <h2 id="non-profit-sector-overview">Non-Profit Sector Overview</h2>
+<h2 id="non-profit-sector-overview">Non-Profit Sector Overview</h2>
 <p>Our programs for non-profit organizations focus on empowering leaders and teams to enhance their operational capabilities and align with their missions. From leadership development to multilingual training, we provide targeted support that helps non-profits maximize their impact.</p>
 <p>We offer the following programs under the <strong>Non-Profit Sector</strong>:</p>
 <h3 id="1-leadership-empowerment-coaching-lecclientele-beneficiariesngolec">1. <a href="/clientele-beneficiaries/ngo/lec">Leadership Empowerment Coaching (LEC)</a></h3>
@@ -211,18 +206,19 @@
 <p>Documenting best practices to ensure continuity and foster long-term organizational growth.</p>
 <p>Explore these programs to find the right solutions to empower your non-profit organization and enhance its impact.</p>
 
-        
-
-      </div>
-    </div>
-  </div>
-</section>
 
 
 
 
 
- 
+
+
+
+
+
+
+
+
 
 
 
