--- a/public/esp-focussed-individuals/index.html
+++ b/public/esp-focussed-individuals/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c09182900b8bb4ceaa5630d88ddf62bd206a760b8717f48a00fe305cdbad5729.css" integrity="sha256-wJGCkAuLtM6qVjDYjd9ivSBqdguHF/SKAP4wXNutVyk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.50f3b8b25b7d8fbb1c86b8edf95371fb6a216d99b313e4971fd50c871eeff115.css" integrity="sha256-UPO4slt9j7schrjt&#43;VNx&#43;2ohbZmzE&#43;SXH9UMhx7v8RU=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -193,40 +193,20 @@
 
 
 
-<section class="py-5">
-  <div class="container">
-    <div class="row mt-4 mt-md-5">
-      
-      <div class="col-md-8 mx-auto">
-        <h2 id="focussed-individual-clientele-overview">Focussed Individual Clientele Overview</h2>
-<p>We offer tailored programs for specific groups, including slow learners, consultants, homemakers, career transitioners, and more. Our training is designed to meet unique needs and provide targeted learning solutions for each group.</p>
-<h3 id="1-slow-learnersclientele-beneficiariesfocussed-individual-clienteleslow-learners">1. <a href="/clientele-beneficiaries/focussed-individual-clientele/slow-learners">Slow Learners</a></h3>
-<p>Develop a slow-paced, individualized learning structure emphasizing clarity, repetition, and practical examples.</p>
-<h3 id="2-consultantsclientele-beneficiariesfocussed-individual-clienteleconsultants">2. <a href="/clientele-beneficiaries/focussed-individual-clientele/consultants">Consultants</a></h3>
-<p>Provide advanced courses on client engagement, analytical skills, and industry-specific knowledge.</p>
-<h3 id="3-homemakersclientele-beneficiariesfocussed-individual-clientelehomemakers">3. <a href="/clientele-beneficiaries/focussed-individual-clientele/homemakers">Homemakers</a></h3>
-<p>Offer empowerment training focusing on entrepreneurship, digital literacy, time management, and personal development.</p>
-<h3 id="4-career-transitionersclientele-beneficiariesfocussed-individual-clientelecareer-transitioners">4. <a href="/clientele-beneficiaries/focussed-individual-clientele/career-transitioners">Career Transitioners</a></h3>
-<p>Provide reskilling and upskilling courses with guidance on career mapping, interview skills, and certifications.</p>
-<h3 id="5-capability-assessmentclientele-beneficiariesfocussed-individual-clientelecapability-assessment">5. <a href="/clientele-beneficiaries/focussed-individual-clientele/capability-assessment">Capability Assessment</a></h3>
-<p>Help individuals evaluate strengths and weaknesses through assessments and personalized feedback.</p>
-<h3 id="6-aspirational-assessmentclientele-beneficiariesfocussed-individual-clienteleaspirational-assessment">6. <a href="/clientele-beneficiaries/focussed-individual-clientele/aspirational-assessment">Aspirational Assessment</a></h3>
-<p>Focus on helping individuals define and pursue long-term goals with courses emphasizing vision and perseverance.</p>
-<h3 id="7-dream-path-guidanceclientele-beneficiariesfocussed-individual-clienteledream-path-guidance">7. <a href="/clientele-beneficiaries/focussed-individual-clientele/dream-path-guidance">Dream Path Guidance</a></h3>
-<p>Provide personalized mentoring to align passions with career or life goals.</p>
 
-        
-
-      </div>
-    </div>
-  </div>
-</section>
+<p>Default content</p>
 
 
 
 
 
- 
+
+
+
+
+
+
+
 
 
 
