--- a/public/esp-government/index.html
+++ b/public/esp-government/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c09182900b8bb4ceaa5630d88ddf62bd206a760b8717f48a00fe305cdbad5729.css" integrity="sha256-wJGCkAuLtM6qVjDYjd9ivSBqdguHF/SKAP4wXNutVyk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.50f3b8b25b7d8fbb1c86b8edf95371fb6a216d99b313e4971fd50c871eeff115.css" integrity="sha256-UPO4slt9j7schrjt&#43;VNx&#43;2ohbZmzE&#43;SXH9UMhx7v8RU=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -191,38 +191,21 @@
 
 
 
-<section class="py-5">
-  <div class="container">
-    <div class="row mt-4 mt-md-5">
-      
-      <div class="col-md-8 mx-auto">
-        <h2 id="government-sector-overview">Government Sector Overview</h2>
-<p>Our training programs for government organizations are designed to address the unique challenges faced by public sector employees. From operational efficiency to leadership development, our programs equip government employees with the skills needed to excel in their roles and drive positive outcomes.</p>
-<p>We offer the following programs under the <strong>Government Sector</strong>:</p>
-<h3 id="1-operational-skill-acceleration-osaclientele-beneficiariesgovtosa">1. <a href="/clientele-beneficiaries/govt/osa">Operational Skill Acceleration (OSA)</a></h3>
-<p>Example-based, real-time training designed to address immediate operational challenges with practical solutions.</p>
-<h3 id="2-training-systems-architecture-tsaclientele-beneficiariesgovttsa">2. <a href="/clientele-beneficiaries/govt/tsa">Training Systems Architecture (TSA)</a></h3>
-<p>Structuring comprehensive training systems to ensure consistency and efficiency across departments.</p>
-<h3 id="3-strategic-employee-development-programs-sedpclientele-beneficiariesgovtsedp">3. <a href="/clientele-beneficiaries/govt/sedp">Strategic Employee Development Programs (SEDP)</a></h3>
-<p>Ongoing training initiatives designed to meet the evolving needs of government employees.</p>
-<h3 id="4-team-building-outdoor-expeditions-toeclientele-beneficiariesgovttoe">4. <a href="/clientele-beneficiaries/govt/toe">Team-Building Outdoor Expeditions (TOE)</a></h3>
-<p>Outdoor learning activities that promote team-building and problem-solving in natural settings.</p>
-<h3 id="5-collaborative-knowledge-facilitation-ckfclientele-beneficiariesgovtckf">5. <a href="/clientele-beneficiaries/govt/ckf">Collaborative Knowledge Facilitation (CKF)</a></h3>
-<p>Collaborating with government-appointed trainers to ensure optimal knowledge transfer.</p>
-<p>Explore these programs to find the right solutions to empower your government workforce and optimize their performance.</p>
 
-        
-
-      </div>
-    </div>
-  </div>
-</section>
+<p>Content for other category 3</p>
 
 
 
 
 
- 
+
+
+
+
+
+
+
+
 
 
 
