--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c09182900b8bb4ceaa5630d88ddf62bd206a760b8717f48a00fe305cdbad5729.css" integrity="sha256-wJGCkAuLtM6qVjDYjd9ivSBqdguHF/SKAP4wXNutVyk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.50f3b8b25b7d8fbb1c86b8edf95371fb6a216d99b313e4971fd50c871eeff115.css" integrity="sha256-UPO4slt9j7schrjt&#43;VNx&#43;2ohbZmzE&#43;SXH9UMhx7v8RU=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
