--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.4415836e3663d76fbe8e079e895d3d5f5a8291cad81ef9043a0934af9c6491da.css" integrity="sha256-RBWDbjZj12&#43;&#43;jgeeiV09X1qCkcrYHvkEOgk0r5xkkdo=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.8989764f6130d8679ce1e09f90c9c40363fe2ab4cf639c2680c1d2b254b52703.css" integrity="sha256-iYl2T2Ew2Gec4eCfkMnEA2P&#43;KrTPY5wmgMHSslS1JwM=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
