--- a/public/esp-education/index.html
+++ b/public/esp-education/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.8989764f6130d8679ce1e09f90c9c40363fe2ab4cf639c2680c1d2b254b52703.css" integrity="sha256-iYl2T2Ew2Gec4eCfkMnEA2P&#43;KrTPY5wmgMHSslS1JwM=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.507cabfc50598a0828c97965e640602faa09a75fe8f7cdd5c405a96923ae2809.css" integrity="sha256-UHyr/FBZiggoyXll5kBgL6oJp1/o983VxAWpaSOuKAk=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -150,7 +150,7 @@
 
 
 
-<section class="hero-clientele non-profit text-center text-light p-5 min-vh-50">
+<section class="hero-clientele education text-center text-light p-5 min-vh-50">
   <h1 class="display-1">ESPeople Education</h1>
   <h2 class="display-4 my-3">Learning Solutions</h2>
   <h3>Students are the backbone for a family, society and the nation. As a culture, we place high regard for the Educators to whom the future of the nation are entrusted with....</h3>
