--- a/public/esp-government/index.html
+++ b/public/esp-government/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.8989764f6130d8679ce1e09f90c9c40363fe2ab4cf639c2680c1d2b254b52703.css" integrity="sha256-iYl2T2Ew2Gec4eCfkMnEA2P&#43;KrTPY5wmgMHSslS1JwM=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.507cabfc50598a0828c97965e640602faa09a75fe8f7cdd5c405a96923ae2809.css" integrity="sha256-UHyr/FBZiggoyXll5kBgL6oJp1/o983VxAWpaSOuKAk=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -150,7 +150,40 @@
 
 
 
-<p>Content for other category 3</p>
+
+<section class="hero-clientele government text-center text-light p-5 min-vh-50">
+  <h1 class="display-1">ESPeople Government</h1>
+  <h2 class="display-4 my-3">Learning Solutions</h2>
+  <h3>Our government-focused training programs at ESPeople are designed to empower leaders with essential skills in decision-making, crisis management, servant leadership, innovation, and more, enabling them to lead with agility, responsibility, and resilience....</h3>
+</section>
+
+<section class="learning-solutions p-5">
+  <div class="container">
+    <h3 class="text-primary mb-4 text-center">We have customised training options based on your need.</h3>
+    <div class="row justify-content-between">
+      <div class="col-md-6 mx-auto solution-box">
+        <h4>Training programs for ESPeople Government include but not limited to:</h4>
+        <hr>
+        <ol>
+<li>Decision making </li>
+<li>Governance </li>
+<li>Crisis management </li>
+<li>Delegation skills</li>
+<li>Problem solving </li>
+<li>Inspirational leadership </li>
+<li>Anchoring and exploring CSR</li>
+<li>Servant leadership </li>
+<li>AI for leaders</li>
+ <li>Agility and innovation</li>
+ <li>Negotiation </li>
+ <li>Team management </li>
+ <li>Handling adverse scenarios</li>
+        </ol>
+      </div>
+    </div>
+
+  </div>
+</section>
 
 
 
