--- a/public/esp-focussed-individuals/index.html
+++ b/public/esp-focussed-individuals/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.507cabfc50598a0828c97965e640602faa09a75fe8f7cdd5c405a96923ae2809.css" integrity="sha256-UHyr/FBZiggoyXll5kBgL6oJp1/o983VxAWpaSOuKAk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.c5dce76fdba2a473c05c157aab0c21c6db2d8d7b387d9f4870002cc1fb428f59.css" integrity="sha256-xdznb9uipHPAXBV6qwwhxtstjXs4fZ9IcAAswftCj1k=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -151,8 +151,39 @@
 
 
 
+<section class="hero-clientele focussed text-center text-light p-5 min-vh-50">
+  <h1 class="display-1">ESPeople Focussed Individuals</h1>
+  <h2 class="display-4 my-3">Learning Solutions</h2>
+  <h3>We offer tailored programs for specific groups, including slow learners, consultants, homemakers, career transitioners, and more. Our training is designed to meet unique needs and provide targeted learning solutions for each group....</h3>
+</section>
+<section class="learning-solutions p-5">
+  <div class="container">
+    
+    <div class="row justify-content-between">
+      <div class="col-md-6 mx-auto solution-box">
+        <!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
+<h3 id="1-slow-learners">1. Slow Learners</h3>
+<p>Develop a slow-paced, individualized learning structure emphasizing clarity, repetition, and practical examples.</p>
+<h3 id="2-consultants">2. Consultants</h3>
+<p>Provide advanced courses on client engagement, analytical skills, and industry-specific knowledge.</p>
+<h3 id="3-homemakers">3. Homemakers</h3>
+<p>Offer empowerment training focusing on entrepreneurship, digital literacy, time management, and personal development.</p>
+<h3 id="4-career-transitioners">4. Career Transitioners</h3>
+<p>Provide reskilling and upskilling courses with guidance on career mapping, interview skills, and certifications.</p>
+<h3 id="5-capability-assessmennt">5. Capability Assessmennt</h3>
+<p>Help individuals evaluate strengths and weaknesses through assessments and personalized feedback.</p>
+<h3 id="6-aspirational-assessment">6. Aspirational Assessment</h3>
+<p>Focus on helping individuals define and pursue long-term goals with courses emphasizing vision and perseverance.</p>
+<h3 id="7-dream-path-guidance">7. Dream Path Guidance</h3>
+<p>Provide personalized mentoring to align passions with career or life goals.</p>
 
-<p>Default content</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 
 
