--- a/public/other-l-and-d-services/index.html
+++ b/public/other-l-and-d-services/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.507cabfc50598a0828c97965e640602faa09a75fe8f7cdd5c405a96923ae2809.css" integrity="sha256-UHyr/FBZiggoyXll5kBgL6oJp1/o983VxAWpaSOuKAk=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.c5dce76fdba2a473c05c157aab0c21c6db2d8d7b387d9f4870002cc1fb428f59.css" integrity="sha256-xdznb9uipHPAXBV6qwwhxtstjXs4fZ9IcAAswftCj1k=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -150,40 +150,43 @@
 
 
 
+<section class="hero-clientele focussed text-center text-light p-5 min-vh-50">
+  <h1 class="display-1">Other L&D Services</h1>
+  
+  
+</section>
 
-
-<p>Default content</p>
-
-
-
-
-
-
-
-
-
-
-<section class="otherLD  py-8 bg-primary--light px-4 px-md-0">
+<section class="learning-solutions p-5">
   <div class="container">
-    <div class="row">
-      <div class="col-md-8 mx-auto">
-        <h3>Other L&D Services</h3>
+    
+    <div class="row justify-content-between">
+      <div class="col-md-6 mx-auto solution-box">
         <ul>
-          <li>Training Courseware Development (TCD)</li>
-          <li>Outbound training Programs logistics support – Learning activities conducted in outdoor settings, bringing
-            the joy of discovery through Nature.</li>
-          <li>External Periodic Programs</li>
-          <li>Support for Internal Training Programs</li>
-          <li>Faculty Co-facilitation</li>
-          <li>Training Needs Analysis & Effectiveness Audits</li>
-          <li>Design and Implementation of Training Processes</li>
-          <li>Capturing Innovative Practices – To preserve organizational learnings for future growth.</li>
-          <li>Training Facilitation in major Indian languages.</li>
-        </ul>
+<li>Training Courseware Development (TCD)</li>
+<li>Outbound training Programs logistics support – Learning activities conducted in outdoor settings, bringing the joy of discovery through Nature.</li>
+<li>External Periodic Programs</li>
+<li>Support for Internal Training Programs</li>
+<li>Faculty Co-facilitation</li>
+<li>Training Needs Analysis &amp; Effectiveness Audits</li>
+<li>Design and Implementation of Training Processes</li>
+<li>Capturing Innovative Practices – To preserve organizational learnings for future growth.</li>
+<li>Training Facilitation in major Indian languages.</li>
+</ul>
+
       </div>
     </div>
+
   </div>
 </section>
+
+
+
+
+
+
+
+
+
 
 
   </main>
