--- a/public/esp-business/index.html
+++ b/public/esp-business/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c5dce76fdba2a473c05c157aab0c21c6db2d8d7b387d9f4870002cc1fb428f59.css" integrity="sha256-xdznb9uipHPAXBV6qwwhxtstjXs4fZ9IcAAswftCj1k=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.4c10b28dae1d6e652f0a1af707421ff4916d56c03b7ff8f3427d07552e26014b.css" integrity="sha256-TBCyja4dbmUvChr3B0If9JFtVsA7f/jzQn0HVS4mAUs=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -171,20 +171,21 @@
     
     <div class="row justify-content-between">
       <div class="col-md-5 solution-box">
-        <h4>RTT - Ready to Train / Instant Energy Packs</h4>
+        
+        <h4>RTT - Ready to Train (Timely to deliver at ease)</h4>
         <h5>Readily available training modules for business settings...</h5>
         <hr>
-        <p>There is no one medicine for all illness. Some require capsules and some require shots. We are here to
-          understand your symptoms, identify the root cause and treat the root cause and not the symptom.</p>
+        <p>This RTT learning solutions are readily available, time tested, matured, refined, meets the urgent & critical
+          learning needs of the client business.</p>
       </div>
       <div class="col-md-5 solution-box">
         <h4>CTDD - Customized training development & delivery</h4>
         <h5>Tailor-made modules designed & developed for your unique & specific needs...</h5>
         <hr>
-        <p>CTDD There are times the learning intervention required for business may be unique & distinct. In such cases
-          our competent training needs assessment team will initiate a study to ascertain your apt needs. For that the
-          study we will interact with all of your stakeholders and come with a road map to design & deliver with start
-          to end clarity. </p>
+        <p>CTDD - There are times the learning interventions required for your business may be unique & distinct. In
+          such cases our competent training needs assessment team will initiate a study to ascertain your apt needs. For
+          that study we will interact with your appropriate stack holders and come with a road map to design, develop &
+          deliver learning solutions with start to end clarity.</p>
       </div>
     </div>
   </div>
