--- a/public/esp-government/index.html
+++ b/public/esp-government/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c5dce76fdba2a473c05c157aab0c21c6db2d8d7b387d9f4870002cc1fb428f59.css" integrity="sha256-xdznb9uipHPAXBV6qwwhxtstjXs4fZ9IcAAswftCj1k=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.4c10b28dae1d6e652f0a1af707421ff4916d56c03b7ff8f3427d07552e26014b.css" integrity="sha256-TBCyja4dbmUvChr3B0If9JFtVsA7f/jzQn0HVS4mAUs=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -154,7 +154,9 @@
 <section class="hero-clientele government text-center text-light p-5 min-vh-50">
   <h1 class="display-1">ESPeople Government</h1>
   <h2 class="display-4 my-3">Learning Solutions</h2>
-  <h3>Our government-focused training programs at ESPeople are designed to empower leaders with essential skills in decision-making, crisis management, servant leadership, innovation, and more, enabling them to lead with agility, responsibility, and resilience....</h3>
+  <h3>Our government-focused training programs at ESPeople are designed to empower leaders with essential skills in
+    decision-making, crisis management, servant leadership, innovation, and more, enabling them to lead with agility,
+    responsibility, and resilience....</h3>
 </section>
 
 <section class="learning-solutions p-5">
@@ -165,19 +167,19 @@
         <h4>Training programs for ESPeople Government include but not limited to:</h4>
         <hr>
         <ol>
-<li>Decision making </li>
-<li>Governance </li>
-<li>Crisis management </li>
-<li>Delegation skills</li>
-<li>Problem solving </li>
-<li>Inspirational leadership </li>
-<li>Anchoring and exploring CSR</li>
-<li>Servant leadership </li>
-<li>AI for leaders</li>
- <li>Agility and innovation</li>
- <li>Negotiation </li>
- <li>Team management </li>
- <li>Handling adverse scenarios</li>
+          <li>Decision making </li>
+          <li>Governance </li>
+          <li>Crisis management </li>
+          <li>Delegation skills</li>
+          <li>Problem solving </li>
+          <li>Inspirational leadership </li>
+          <li>Anchoring and exploring CSR</li>
+          <li>Servant leadership </li>
+          <li>AI for leaders</li>
+          <li>Agility and innovation</li>
+          <li>Negotiation </li>
+          <li>Team management </li>
+          <li>Handling adverse scenarios</li>
         </ol>
       </div>
     </div>
