--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.c5dce76fdba2a473c05c157aab0c21c6db2d8d7b387d9f4870002cc1fb428f59.css" integrity="sha256-xdznb9uipHPAXBV6qwwhxtstjXs4fZ9IcAAswftCj1k=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.4c10b28dae1d6e652f0a1af707421ff4916d56c03b7ff8f3427d07552e26014b.css" integrity="sha256-TBCyja4dbmUvChr3B0If9JFtVsA7f/jzQn0HVS4mAUs=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -189,7 +189,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/images/hero-img-2.jpg" class="d-block w-100 carousel-image neumorphism " alt="non-profit-2 Image">
+              <img src="/images/non-profit-bg.jpg" class="d-block w-100 carousel-image neumorphism " alt="non-profit-2 Image">
               <div class="carousel-caption d-md-block bg-dark py-1 rounded-2 opacity-50">
                 <h5>ESP Non-Profit</h5>
               </div>
@@ -597,7 +597,7 @@
 </script>
 
 
-<section class="why-choose-us py-8">
+<section class="why-choose-us py-8 d-none">
   <div class="container text-center">
     
     <h2 class="section-title mb-5">Why ESPeople</h2>
@@ -660,6 +660,38 @@
     
     <div class="mt-5 d-none">
       <a href="espeople.in/why-choose-us" class="btn btn-secondary">Read More</a>
+    </div>
+  </div>
+</section>
+
+<section class="why-espeople">
+  <div class="content">
+    <div class="column learning-model">
+      <img src="/images/learning-model.png" alt="learning model">
+      <h3>The ESP Learning Model</h3>
+      <ul>
+        <li><strong>Awareness:</strong> Learning begins with creating a sense of awareness.</li>
+        <li><strong>Understanding:</strong> Gain clarity of the situation with a resource person.</li>
+        <li><strong>Learning:</strong> Facilitate real-world application of the understanding.</li>
+        <li><strong>Realization:</strong> Perceive the situation in its entirety as realization unfolds.</li>
+        <li><strong>Habitualization:</strong> Internalize and habitualize learned skills or behaviors.</li>
+      </ul>
+    </div>
+    <div class="column core-belief">
+      <img src="/images/core-belief.png" alt="our-core-belief img">
+      <h3>Our Core Belief</h3>
+      <p>
+        Love people for who they are instead of judging them for what they are not.
+        <em>Essence is, accept people as they are!</em>
+      </p>
+    </div>
+    <div class="column delivery">
+      <img src="/images/what-we-deliver-1.png" alt="what we deliver">
+      <h3>What We Deliver</h3>
+      <p>
+        We energize your team's capabilities and synergize them with core strengths for high performance.
+        <strong>"Thus, we are ESPeople Trainingsmiths"</strong>
+      </p>
     </div>
   </div>
 </section>
