changes- design indi btn

--- a/public/career/index.html
+++ b/public/career/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.4c10b28dae1d6e652f0a1af707421ff4916d56c03b7ff8f3427d07552e26014b.css" integrity="sha256-TBCyja4dbmUvChr3B0If9JFtVsA7f/jzQn0HVS4mAUs=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.3ff0242e2523458675b30756064ff570e1896fe00313f6b926260fa482927f3c.css" integrity="sha256-P/AkLiUjRYZ1swdWBk/1cOGJb&#43;ADE/a5JiYPpIKSfzw=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -172,9 +172,7 @@
                 <a class="nav-link" href="/about-ESP">About us</a>
             </li>
     
-            <li class="nav-item">
-                <a class="nav-link" href="/clientele-beneficiaries">Clientele</a>
-            </li>
+            
             <li class="nav-item">
                 <a class="nav-link" href="/other-l-and-d-services">Other L&D</a>
             </li>
