--- a/public/other-l-and-d-services/index.html
+++ b/public/other-l-and-d-services/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.3ff0242e2523458675b30756064ff570e1896fe00313f6b926260fa482927f3c.css" integrity="sha256-P/AkLiUjRYZ1swdWBk/1cOGJb&#43;ADE/a5JiYPpIKSfzw=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.11ac97908c85ab19224e045daf6b3a3fa37d2e6844bdd846a8b6b51fd2bd42f9.css" integrity="sha256-EayXkIyFqxkiTgRdr2s6P6N9LmhEvdhGqLa1H9K9Qvk=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -185,61 +185,62 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="service-card p-4">
-          <h4 class="service-title">Training Courseware Development (TCD)</h4>
-          <p>Develop comprehensive course materials tailored to training needs.</p>
+          <h4 class="service-title">Training Courseware Development</h4>
+          <p>We develop comprehensive course materials tailored to training needs</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
           <h4 class="service-title">Outbound Training Programs Logistics Support</h4>
-          <p>Manage logistics for effective training programs outdoors.</p>
+          <p>Coordinate logistics support from end-to-end for your outbound training programs</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
           <h4 class="service-title">External Periodic Programs</h4>
-          <p>Organize and manage periodic external training sessions.</p>
+          <p>We also conduct periodical external training programs. You can sponsor your team for that</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
-          <h4 class="service-title">Support for Internal Training Programs</h4>
-          <p>Enhance internal training efforts with tailored support.</p>
+          <h4 class="service-title">Supporting your in-house Training Programs</h4>
+          <p>We support & facilitate your in house training sessions whether it is small or in entirity</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
           <h4 class="service-title">Faculty Co-facilitation</h4>
-          <p>Assist faculty in delivering impactful training sessions.</p>
+          <p><em>Our resource persons support can be drawn for your in-house training for an impactful results</em></p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
-          <h4 class="service-title">Training Needs Analysis & Effectiveness Audits</h4>
-          <p>Identify training gaps and assess program outcomes.</p>
+          <h4 class="service-title">Training needs analysis & Effectiveness training audits</h4>
+          <p>We can be retained to assess & audit for overall training needs of your organization and come out with a detailed road map for implementation</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
-          <h4 class="service-title">Design and Implementation of Training Processes</h4>
-          <p>Develop effective training strategies and processes.</p>
+          <h4 class="service-title">Designing, developing effective "Training Processes" for your organization</h4>
+          <p>Our expertise can be engaged for your in-house training robust processes designing, developing & seeding it for your organisational results</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
-          <h4 class="service-title">Capturing Innovative Practices</h4>
-          <p>Document and implement innovative practices in training.</p>
+          <h4 class="service-title">Capturing your Innovative training practices</h4>
+          <p>Effective recording, documenting for future reference w.r.t your innovative training practices</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="service-card p-4">
-          <h4 class="service-title">Training Facilitation in Major Indian Languages</h4>
-          <p>Deliver training in multiple Indian languages for diverse audiences.</p>
+          <h4 class="service-title">Training facilitation in major Indian languages</h4>
+          <p>We have capabilities to deliver training in multiple Indian languages for diverse audiences. It will facilitate full blossomed learnings to your teams</p>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
