--- a/public/about-us/index.html
+++ b/public/about-us/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.3ff0242e2523458675b30756064ff570e1896fe00313f6b926260fa482927f3c.css" integrity="sha256-P/AkLiUjRYZ1swdWBk/1cOGJb&#43;ADE/a5JiYPpIKSfzw=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.11ac97908c85ab19224e045daf6b3a3fa37d2e6844bdd846a8b6b51fd2bd42f9.css" integrity="sha256-EayXkIyFqxkiTgRdr2s6P6N9LmhEvdhGqLa1H9K9Qvk=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -147,7 +147,7 @@
     
 
 
-<section class="learning-section px-3 py-5">
+<section class="learning-section px-3 py-custom gradient-bg">
   <div class="container">
     <h1 class="text-center mb-4">About ESPeople</h1>
     <div class="row align-items-center">
