--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.3ff0242e2523458675b30756064ff570e1896fe00313f6b926260fa482927f3c.css" integrity="sha256-P/AkLiUjRYZ1swdWBk/1cOGJb&#43;ADE/a5JiYPpIKSfzw=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.11ac97908c85ab19224e045daf6b3a3fa37d2e6844bdd846a8b6b51fd2bd42f9.css" integrity="sha256-EayXkIyFqxkiTgRdr2s6P6N9LmhEvdhGqLa1H9K9Qvk=" crossorigin="anonymous">
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -224,7 +224,7 @@
 </section>
 
 <section class="contact-section">
-  <div class="container py-5">
+  <div class="container p-5">
     <div class="text-center text-light mb-5">
       <h1 class="display-5">Get in Touch to Unlock Your Business Potential</h1>
       <p class="fst-italic">
@@ -232,13 +232,9 @@
         Our ESP (Energize & Synergize People) method helps businesses overcome these challenges. Reach out below, and we'll partner with you to unlock growth and success.
       </p>
     </div>
-  </div>
-</section>
-<section class="contact-section form">
-  <div class="container">
     <div class="row">
-      <div class="col-md-5">
-        <div class="contact-info p-4 rounded">
+      <div class="col-md-5 contact-left-bg pe-md-0">
+        <div class="contact-info p-4">
           <h3 class="mb-4 text-light">Contact Information</h3>
           <p class="text-light">
             <strong>Address:</strong> 123 Main Street, Chennai, Tamil Nadu, India
@@ -251,8 +247,9 @@
           </p>
         </div>
       </div>
-      <div class="col-md-7 mt-4 mt-md-0">
-        <form class="contact-form p-4 rounded">
+      <div class="col-md-7 mt-4 mt-md-0 ps-md-0">
+        <form class="contact-form p-4">
+          <h3 class="mb-4 text-light">Contact Form</h3>
           <div class="row g-3">
             <div class="col-md-6">
               <input type="text" class="form-control" placeholder="Your Name">
@@ -278,6 +275,8 @@
     </div>
   </div>
 </section>
+
+
 
 
 
