--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -246,20 +246,20 @@
           <h3 class="mb-4 text-light">Contact Form</h3>
           <div class="row g-3">
             <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Your Name" required>
+              <input type="text" class="form-control" placeholder="Your Name" name="Name" required>
             </div>
             <div class="col-md-6">
-              <input type="tel" minlength="10" maxlength="10" class="form-control" placeholder="Your Mobile Number" required>
+              <input type="tel" minlength="10" maxlength="10" class="form-control" placeholder="Your Mobile Number" name="Mobile No." required>
             </div>
             <div class="col-md-6">
-              <input type="email" class="form-control" placeholder="abc@email.com" required>
+              <input type="email" class="form-control" placeholder="abc@email.com" name="Email id" required>
             </div>
             <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Subject" required>
+              <input type="text" class="form-control" placeholder="Subject" name="Subject" required>
             </div>
           </div>
           <div class="mt-3">
-            <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
+            <textarea class="form-control" rows="5" placeholder="Your Message" name="Message" required></textarea>
           </div>
           <div class="mt-3 text-end">
             <button type="submit" class="btn btn-primary" aria-label="send Message button">Send Message</button>
@@ -269,7 +269,6 @@
     </div>
   </div>
 </section>
-
 
 
 
