--- a/public/index.html
+++ b/public/index.html
@@ -317,7 +317,13 @@
                   <i class="fa-regular fa-file-pdf me-2"></i>Brochure
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
-                  <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"><i class="fa-regular fa-eye me-1"></i>View Brochure</a></li>
+                  <li>
+                    <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank" rel="noopener noreferrer">
+                      <i class="fa-regular fa-eye me-1"></i>View Brochure
+                    </a>
+                  </li>
+                  
+                  
                   <li><a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" download><i class="fa-solid fa-download me-1"></i>Download Brochure</a></li>
                 </ul>
               </div>
