view brochure and changes in ui

--- a/public/esp-government/index.html
+++ b/public/esp-government/index.html
@@ -26,12 +26,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/scss/main.min.5a40c02f7f5910c37102ed673666198dd38dcd7655812db90435689014f3b576.css" integrity="sha256-WkDAL39ZEMNxAu1nNmYZjdONzXZVgS25BDVokBTztXY=" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+      <link rel="stylesheet" href="/scss/main.min.05ea58b9d09870ea90debdf122d139bda174b04022c8617cd576875734ae18c3.css" integrity="sha256-BepYudCYcOqQ3r3xItE5vaF0sEAiyGF81XaHVzSuGMM=" crossorigin="anonymous">
 
-      <script src="/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js" integrity="sha256-I80MfYNyY7nq65buLZzPopadqj&#43;gD6HB/ocBqbhyUaE=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -263,6 +263,15 @@
   
 
   
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+      <script src="/js/main.cb057ad2a9886941424635b0431512ba890b6c5c470fd7ae3bdd49636f008c06.js" integrity="sha256-ywV60qmIaUFCRjWwQxUSuokLbFxHD9euO91JY28AjAY=" crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
