--- a/public/index.html
+++ b/public/index.html
@@ -327,8 +327,8 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
                 <li>
-                  <a class="dropdown-item d-flex align-items-center gap-1" href="/PDF/ESP-brochure.pdf" target="_blank"
-                    rel="noopener noreferrer">
+                  <a class="dropdown-item d-flex align-items-center gap-1" href="#" 
+                     onclick="openPDFModal('/PDF/ESP-brochure.pdf')">
                     <i class="fa-regular fa-eye me-1"></i>View Brochure
                   </a>
                 </li>
@@ -832,6 +832,30 @@
   });
 </script>
 
+
+
+<div id="pdfModal" class="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0, 0, 0, 0.7); z-index:1000;">
+  <div style="position:relative; width:90%; height:90%; margin:auto; background:white; padding:10px;">
+    <iframe id="pdfFrame" src="" style="width:100%; height:100%; border:none;"></iframe>
+    <button onclick="closePDFModal()" style="position:absolute; top:5px; right:5px;">Close</button>
+  </div>
+</div>
+
+<script>
+  function openPDFModal(pdfUrl) {
+    if (window.innerWidth <= 768) { 
+      document.getElementById('pdfFrame').src = pdfUrl;
+      document.getElementById('pdfModal').style.display = 'block';
+    } else {
+      window.open(pdfUrl, '_blank');
+    }
+  }
+
+  function closePDFModal() {
+    document.getElementById('pdfModal').style.display = 'none';
+    document.getElementById('pdfFrame').src = '';
+  }
+</script>
 
 
   </main>
