view pdf mozilla cdn

--- a/public/index.html
+++ b/public/index.html
@@ -328,7 +328,7 @@
               <ul class="dropdown-menu" aria-labelledby="brochureDropdown">
                 <li>
                   <a class="dropdown-item d-flex align-items-center gap-1" href="#" 
-                     onclick="openPDFModal('/PDF/ESP-brochure.pdf')">
+                     onclick="loadPDF('/PDF/ESP-brochure.pdf')">
                     <i class="fa-regular fa-eye me-1"></i>View Brochure
                   </a>
                 </li>
@@ -831,32 +831,36 @@
     videoIframe.src = videoIframe.src; 
   });
 </script>
+<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 
-
-
-<div id="pdfModal" class="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0, 0, 0, 0.7); z-index:1000;">
-  <div style="position:relative; width:90%; height:90%; margin:auto; background:white; padding:10px;">
-    <iframe id="pdfFrame" src="" style="width:100%; height:100%; border:none;"></iframe>
-    <button onclick="closePDFModal()" style="position:absolute; top:5px; right:5px;">Close</button>
-  </div>
+<div id="pdfContainer" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:white; z-index:1000;">
+  <canvas id="pdfCanvas"></canvas>
+  <button onclick="closePDF()" style="position:absolute; top:10px; right:10px;">Close</button>
 </div>
 
 <script>
-  function openPDFModal(pdfUrl) {
+  const pdfjsLib = window['pdfjs-dist/build/pdf'];
+
+  async function loadPDF(url) {
     if (window.innerWidth <= 768) { 
-      document.getElementById('pdfFrame').src = pdfUrl;
-      document.getElementById('pdfModal').style.display = 'block';
+      document.getElementById('pdfContainer').style.display = 'block';
+      const pdf = await pdfjsLib.getDocument(url).promise;
+      const page = await pdf.getPage(1);
+      const viewport = page.getViewport({ scale: 1.5 });
+      const canvas = document.getElementById('pdfCanvas');
+      const context = canvas.getContext('2d');
+      canvas.width = viewport.width;
+      canvas.height = viewport.height;
+      page.render({ canvasContext: context, viewport: viewport });
     } else {
-      window.open(pdfUrl, '_blank');
+      window.open(url, '_blank');
     }
   }
 
-  function closePDFModal() {
-    document.getElementById('pdfModal').style.display = 'none';
-    document.getElementById('pdfFrame').src = '';
+  function closePDF() {
+    document.getElementById('pdfContainer').style.display = 'none';
   }
 </script>
-
 
   </main>
   <footer class="footer">
