--- a/temp.html
+++ b/temp.html
@@ -347,3 +347,203 @@
     </div>
   </footer>
    -->
+
+   https://drive.google.com/file/d/1XxVGnABDXddwiSZF9-cZ6mywCnt1uP7W/view?usp=sharing
+
+     <!-- Card 3: Adapting to Change -->
+     <div class="col-lg-4 col-md-6 mb-4 d-none">
+      <div class="neumorphic-card">
+        <img src="/images/video-call-training-2.png" alt="video-call-training-1 img">
+        <h4 class="mt-3">Adapting to Change</h4>
+        <p>We've adapted to the modern needs of businesses by offering virtual training. Now, you can access our
+          programs via video conferencing, ensuring flexibility and ease.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- CTA -->
+  <div class="mt-5 d-none">
+    <a href="espeople.in/why-choose-us" class="btn btn-secondary">Read More</a>
+  </div>
+
+  <!-- esp core belief and learning model -->
+<section class="why-choose-us py-8 d-none">
+  <div class="container text-center">
+    <!-- Title -->
+    <h1 class=" mb-5">Why ESPeople</h1>
+
+    <div class="row justify-content-center">
+      <!-- Card 2: ESP Learning Model -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="">
+          <h4 class="mt-3">The ESP Learning Model</h4>
+          <img src="/images/learning-model.png" alt="learning model">
+          <ul class="mt-3">
+            <li><strong>Awareness</strong> – Learning begins with creating a sense of awareness about the situation.
+            </li>
+            <li><strong>Understanding</strong> – This is further enhanced by the resource person, helping the individual
+              gain a greater clarity of their situation.</li>
+            <li><strong>Learning</strong> – Understanding facilitates better learning by enabling the individual to see
+              its real-world application.</li>
+            <li><strong>Realization</strong> – – As realization unfolds, the individual is now able to perceive their
+              situation in its entirety.</li>
+            <li><strong>Habitualization</strong> – An environment is created within the individual to internalize and
+              habitualize the learned skill or behavior.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Card 1: Our core belief -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="">
+          <h4 class="mt-3">Our Core Belief</h4>
+          <img src="/images/energize-synergize.jpeg" alt="our-core-belief img">
+          <p class="mt-3"><em>Love people for who they are....</em> <br>instead of judging them for what they are
+            not....
+            <br> <br>
+            <strong><em>Essence is, accept people as they are!</em></strong>
+            <br> <br>
+            Bridge the gap in required knowledge, skills, and practices which are appropriate to their aspirational
+            growth goals
+          </p>
+        </div>
+      </div>
+
+      <!-- card 3: What we deliver -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class=" ">
+          <h4 class="mt-3">What we deliver</h4>
+          <img src="/images/what-we-deliver-1.png" alt="what we deliver">
+          <p class="text-center text-md-start mt-3">We simply ENERGIZE your people capabilities & then SYNERGIZE them
+            with their core team for high performance</p>
+          <strong><em>"Thus we are ESPeople Trainingsmiths"</em></strong>
+
+        </div>
+      </div>
+
+
+
+    
+  </div>
+</section>
+
+
+<!-- learning model flower blossom animation section -->
+<div class="learning-model-container d-none">
+  <div class="my-4 text-center">
+    <h1 class="my-3">ESP Learning model</h1>
+    <a class="btn btn-primary" onclick="nextStage('awareness')">Start Learning</a>
+  </div>
+  <div class="stage awareness" onclick="nextStage('understanding')">
+    <img src="/images/bud.png" alt="Awareness Bud">
+    <p>Awareness</p>
+  </div>
+  <div class="stage understanding" onclick="nextStage('learning')">
+    <img src="/images/leaf-small.png" alt="Understanding Leaf">
+    <p>Understanding</p>
+  </div>
+  <div class="stage learning" onclick="nextStage('realization')">
+    <img src="/images/leaf-medium.png" alt="Learning Leaf">
+    <p>Learning</p>
+  </div>
+  <div class="stage realization" onclick="nextStage('habitualization')">
+    <img src="/images/leaf-large.png" alt="Realization Leaf">
+    <p>Realization</p>
+  </div>
+  <div class="stage habitualization">
+    <img src="/images/flower.png" alt="Habitualization Flower">
+    <p>Habitualization</p>
+  </div>
+</div>
+<script>
+  function nextStage(nextStageClass) {
+    // Reset all stages
+    document.querySelectorAll('.stage').forEach(stage => {
+      stage.classList.remove('active');
+    });
+
+    // Activate the next stage
+    const nextStageElement = document.querySelector(`.${nextStageClass}`);
+    nextStageElement.classList.add('active');
+
+    // Scroll to the activated stage
+    nextStageElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
+  }
+</script>
+
+
+<section class="evolution-vision-mission px-4 px-md-0 gradient-bg d-none">
+  <div class="container">
+    <div class="row">
+      <!-- Evolution Section -->
+      <div class="evolution-section col-md-5 me-auto" data-aos="fade-right">
+        <h1 class="display-5 mb-3">The Evolution of ESPeople</h1>
+        <p class="evolution">
+          Every great organisation starts with a dream—a vision for achieving excellence. But to turn that vision into
+          reality, you need the right people who have the energy and ability to make things happen. That's where
+          ESPeople come in. We partner with organisations to develop and empower their teams, helping them turn their
+          original dream into reality and inspire new heights of success
+        </p>
+        <!-- <a href="#about-us" class="btn btn-dark mt-4">About us</a> -->
+      </div>
+      <!-- Divider -->
+      <div class="col-md-2 mx-auto d-none d-md-block">
+        <div class="vertical-divider"></div>
+      </div>
+      <hr class="d-md-none">
+      <!-- Vision & Mission Section -->
+      <div class="col-md-5 ms-auto vision-mission-section" data-aos="fade-left">
+        <h1 class="display-5">ESP Vision & Mission</h1>
+        <p class="vision">
+          <em><strong>Energize & Synergize People</strong> capabilities through effective learning interventions</em>
+        </p>
+        <p class="mission">
+          <strong>Be a best training service provider in enabling people</strong>
+        </p>
+        <ul>
+          <li>to maximize their energy &</li>
+          <li>to effectively employ it in synergy with their teams</li>
+          <li>towards organizational goals achievement</li>
+        </ul>
+      </div>
+      <!-- </div> -->
+    </div>
+  </div>
+</section>
+
+  <!-- Focussed Individual -->
+  <div class="clientele-section px-4 px-md-0 py-5 d-none">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 order-first">
+          <img src="/images/focussed.png" alt="Clientele Icon" class="industry-icon">
+        </div>
+        <div class="col-md-6 order-md-1">
+          <h3 class="industry-title mt-4 mt-md-0">Focussed Individual Clientele</h3>
+          <hr>
+          <h4>Personalized Development</h4>
+          <p><em><strong>We provide tailored solutions for individuals seeking personal growth, skill enhancement, and
+                guidance towards their unique goals.</strong></em></p>
+
+          <p>Our focused clientele includes:</p>
+          <ul>
+            <li>Slow Learners</li>
+            <li>Consultants</li>
+            <li>Homemakers</li>
+            <li>Career Transitioners</li>
+            <li>Capability Assessment</li>
+            <li>Aspirational Assessment</li>
+            <li>Dream Path Guidance</li>
+          </ul>
+
+          <p><strong><em>Empowering each individual to realize their potential and build a fulfilling life
+                journey.</em></strong></p>
+
+          <div class="d-flex gap-3 align-items-center mt-4 justify-content-around justify-content-md-start">
+            <a href="/clientele-beneficiaries/focused-individual" class="btn btn-primary--outline">Know more</a>
+            <a href="" class="btn btn-primary--outline_none">Watch Video</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
