--- a/public/esp-business/index.html
+++ b/public/esp-business/index.html
@@ -21,16 +21,18 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-      <link rel="stylesheet" href="/scss/main.min.05ea58b9d09870ea90debdf122d139bda174b04022c8617cd576875734ae18c3.css" integrity="sha256-BepYudCYcOqQ3r3xItE5vaF0sEAiyGF81XaHVzSuGMM=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.525fd059aee0c3bcb16489d9b18ff2d9360452f117ca73305e940d2b8a22220e.css" integrity="sha256-Ul/QWa7gw7yxZInZsY/y2TYEUvEXynMwXpQNK4oiIg4=" crossorigin="anonymous">
 
 
 </head>
@@ -40,11 +42,11 @@
 
 <nav class="navbar navbar-expand-md navbar-light fixed-top p-0">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
+    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0 text-decoration-none" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
       <div class="brand-name">
-        <h6 class=" mb-0">ESPeople</h6>
-        <em>TrainingSmiths</em>
+        <h2 class="brand mb-0">ESPeople</h2>
+        <p class="tagline mb-0">TrainingSmiths</p>
       </div>
     </a>
 
@@ -149,7 +151,7 @@
 
 
 <div class="bis">
-  <section class="hero-clientele business text-center text-light p-5 min-vh-50">
+  <section class="hero-clientele business text-center text-light p-5 ">
     <h1 class="display-1">ESPeople Business</h1>
     <h2 class="display-4 my-3">Learning Solutions</h2>
     <h3>Learning is a lifelong journey. <br> We are here to sail along with your organization and your workforce...</h3>
@@ -289,7 +291,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-      <script src="/js/main.cb057ad2a9886941424635b0431512ba890b6c5c470fd7ae3bdd49636f008c06.js" integrity="sha256-ywV60qmIaUFCRjWwQxUSuokLbFxHD9euO91JY28AjAY=" crossorigin="anonymous"></script>
+      <script src="/js/main.0d157758e8caa555f3532c803626f95b5150dc9703e3548a268737e89da0bc4a.js" integrity="sha256-DRV3WOjKpVXzUyyANib5W1FQ3JcD41SKJoc36J2gvEo=" crossorigin="anonymous"></script>
 
 
 </body>
