--- a/public/other-l-and-d-services/index.html
+++ b/public/other-l-and-d-services/index.html
@@ -21,16 +21,18 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-      <link rel="stylesheet" href="/scss/main.min.05ea58b9d09870ea90debdf122d139bda174b04022c8617cd576875734ae18c3.css" integrity="sha256-BepYudCYcOqQ3r3xItE5vaF0sEAiyGF81XaHVzSuGMM=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/scss/main.min.525fd059aee0c3bcb16489d9b18ff2d9360452f117ca73305e940d2b8a22220e.css" integrity="sha256-Ul/QWa7gw7yxZInZsY/y2TYEUvEXynMwXpQNK4oiIg4=" crossorigin="anonymous">
 
 
 </head>
@@ -40,11 +42,11 @@
 
 <nav class="navbar navbar-expand-md navbar-light fixed-top p-0">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0" href="/">
+    <a class="navbar-brand d-flex align-items-center gap-2 gap-md-3 p-0 text-decoration-none" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
       <div class="brand-name">
-        <h6 class=" mb-0">ESPeople</h6>
-        <em>TrainingSmiths</em>
+        <h2 class="brand mb-0">ESPeople</h2>
+        <p class="tagline mb-0">TrainingSmiths</p>
       </div>
     </a>
 
@@ -149,73 +151,97 @@
 
 
 <div class="other">
-  <section class="hero-clientele other text-center text-light p-5 min-vh-50">
+  <section class="hero-clientele other text-center text-light p-5">
     <h1 class="display-1">Other L&D Services</h1>
   </section>
-  <section class="services-section py-5">
+  <section class="services-section py-custom">
     <div class="container">
-      <h2 class="text-center mb-5 text-white">Other L&D Services</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Training Courseware Development</h4>
+      
+      <div class="row g-5">
+    <div class="col-md-4" data-aos="fade-right">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Training Courseware Development
+            </h3>
+            <i class="bi bi-book"></i> 
             <p>We develop comprehensive course materials tailored to training needs</p>
-          </div>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Outbound Training Programs Logistics Support</h4>
+    </div>
+    <div class="col-md-4" data-aos="fade-down" data-aos-delay="100">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Outbound Training Programs Logistics Support
+            </h3>
+            <i class="bi bi-truck"></i> 
             <p>Coordinate logistics support from end-to-end for your outbound training programs</p>
-          </div>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">External Periodic Programs</h4>
+    </div>
+    <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                External Periodic Programs
+            </h3>
+            <i class="bi bi-calendar-event"></i> 
             <p>We also conduct periodical external training programs. You can sponsor your team for that</p>
-          </div>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Supporting your in-house Training Programs</h4>
-            <p>We support & facilitate your in house training sessions whether it is small or in entirity</p>
-          </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-right">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Supporting Your In-House Training Programs
+            </h3>
+            <i class="bi bi-building"></i> 
+            <p>We support & facilitate your in-house training sessions whether it is small or in entirety</p>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Faculty Co-facilitation</h4>
-            <p><em>Our resource persons support can be drawn for your in-house training for an impactful results</em>
-            </p>
-          </div>
+    </div>
+    <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Faculty Co-Facilitation
+            </h3>
+            <i class="bi bi-people"></i>
+            <p><em>Our resource persons' support can be drawn for your in-house training for impactful results</em></p>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Training needs analysis & Effectiveness training audits</h4>
-            <p>We can be retained to assess & audit for overall training needs of your organization and come out with a
-              detailed road map for implementation</p>
-          </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Training Needs Analysis & Effectiveness Audits
+            </h3>
+            <i class="bi bi-graph-up-arrow"></i> 
+            <p>We can be retained to assess & audit the overall training needs of your organization and provide a detailed roadmap for implementation</p>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Designing, developing effective "Training Processes" for your organization</h4>
-            <p>Our expertise can be engaged for your in-house training robust processes designing, developing & seeding
-              it
-              for your organisational results</p>
-          </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-right">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Designing Effective "Training Processes"
+            </h3>
+            <i class="bi bi-diagram-2"></i> 
+            <p>Our expertise can be engaged for your in-house training robust processes designing, developing & seeding for your organizational results</p>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Capturing your Innovative training practices</h4>
-            <p>Effective recording, documenting for future reference w.r.t your innovative training practices</p>
-          </div>
+    </div>
+    <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Capturing Your Innovative Training Practices
+            </h3>
+            <i class="bi bi-journal-text"></i>
+            <p>Effective recording and documenting for future reference w.r.t your innovative training practices</p>
         </div>
-        <div class="col-md-4">
-          <div class="service-card p-4">
-            <h4 class="service-title">Training facilitation in major Indian languages</h4>
-            <p>We have capabilities to deliver training in multiple Indian languages for diverse audiences. It will
-              facilitate full blossomed learnings to your teams</p>
-          </div>
+    </div>
+    <div class="col-md-4" data-aos="fade-right" data-aos-delay="200">
+        <div class="service-card p-4">
+            <h3 class="service-title fst-italic">
+                Training Facilitation in Major Indian Languages
+            </h3>
+            <i class="bi bi-chat-left-text"></i>
+            <p>We have capabilities to deliver training in multiple Indian languages for diverse audiences. It will facilitate full blossomed learnings to your teams</p>
         </div>
-      </div>
+    </div>
+</div>
+
+      
     </div>
   </section>
 </div>
@@ -275,7 +301,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-      <script src="/js/main.cb057ad2a9886941424635b0431512ba890b6c5c470fd7ae3bdd49636f008c06.js" integrity="sha256-ywV60qmIaUFCRjWwQxUSuokLbFxHD9euO91JY28AjAY=" crossorigin="anonymous"></script>
+      <script src="/js/main.0d157758e8caa555f3532c803626f95b5150dc9703e3548a268737e89da0bc4a.js" integrity="sha256-DRV3WOjKpVXzUyyANib5W1FQ3JcD41SKJoc36J2gvEo=" crossorigin="anonymous"></script>
 
 
 </body>
