--- a/public/kadigai/index.html
+++ b/public/kadigai/index.html
@@ -169,11 +169,10 @@
       </div>
       <div class="col-md-6 mt-4 mt-md-0">
         <h3>ESP Kadigai</h3>
-         <p><p>கடிகை என்றால் “ஆழ்ந்து அறிவு பெற முயலும் இடம்” என்று பொருள் கொள்ளலாம்
-Center for advanced research &amp; learning
-கடிகை என்றால் “ஆழ்ந்து அறிவு பெற முயலும் இடம்” என்று பொருள் கொள்ளலாம்
-கற்றறிந்தோர் சபை
-கடிகை என்பது கல்விமான்களும் மாணவர்களும் முயன்று அறிவை வளர்த்துக்கொள்ளும் இடம் அல்லது சபை</p>
+         <p><p>ESP Kadigai is a separate &amp; focussed SBU of ESPeople Trainingsmiths</p>
+<p>It&rsquo;s a center for advanced research on learning solutions</p>
+<p>It&rsquo;s primary focus is to deliver world class training virtually</p>
+<p>&ldquo;Wherever &amp; whenever the learner is ready the trainer is also ready&hellip;&hellip; VIRTUALLY&rdquo;</p>
 <p>ESP Kadigai is a separate &amp; focussed SBU of ESPeople Trainingsmiths.
 It&rsquo;s primary focus is to deliver world class training virtually. &ldquo;Wherever the learner is ready the trainer is also ready&rdquo;</p>
 </p>
@@ -192,6 +191,10 @@ It&rsquo;s primary focus is to deliver world class training virtually. &ldquo;Wh
             <img src="/images/logo.png" alt="ESPeople Logo" class="logo-img">
         </div>
         <ul class="nav justify-content-center">
+            
+             <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/about/about-espeople">About ESPeople</a>
             </li>
@@ -207,6 +210,10 @@ It&rsquo;s primary focus is to deliver world class training virtually. &ldquo;Wh
             <li class="nav-item">
                 <a class="nav-link" href="/kadigai">ESP Kadigai</a>
             </li>
+            
+             <li class="nav-item">
+                <a class="nav-link" href="/contact-us">Contact Us</a>
+             </li>
         </ul>
 
         <div class="social-icons mt-3">
