--- a/public/about/about-espeople/index.html
+++ b/public/about/about-espeople/index.html
@@ -209,6 +209,10 @@
             <img src="/images/logo.png" alt="ESPeople Logo" class="logo-img">
         </div>
         <ul class="nav justify-content-center">
+            
+             <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/about/about-espeople">About ESPeople</a>
             </li>
@@ -224,6 +228,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/kadigai">ESP Kadigai</a>
             </li>
+            
+             <li class="nav-item">
+                <a class="nav-link" href="/contact-us">Contact Us</a>
+             </li>
         </ul>
 
         <div class="social-icons mt-3">
